# spiking_CPG

./: README.md
Experiments/amphibot_swimming_spiking_CPG/: amphibotSwimming.ini  amphibotSwimming.uis  amphibot_swimming_spiking_CPG.exc  ampl_drive.py  bibi_configuration.bibi  linear_gain.py
Models/amphibot/: amphibot_world.sdf  amphibot_world_big_pool.sdf  model.config
Models/amphibot/data/: data.csv
Models/amphibot/data/partio/: ParticleData_Fluid_100.bgeo  ParticleData_Fluid_1000.bgeo  ParticleData_Fluid_1020.bgeo  ParticleData_Fluid_1040.bgeo  ParticleData_Fluid_1060.bgeo  ParticleData_Fluid_1080.bgeo  ParticleData_Fluid_1100.bgeo  ParticleData_Fluid_1120.bgeo  ParticleData_Fluid_1140.bgeo  ParticleData_Fluid_1160.bgeo  ParticleData_Fluid_1180.bgeo  ParticleData_Fluid_120.bgeo  ParticleData_Fluid_1200.bgeo  ParticleData_Fluid_1220.bgeo  ParticleData_Fluid_1240.bgeo  ParticleData_Fluid_1260.bgeo  ParticleData_Fluid_1280.bgeo  ParticleData_Fluid_1300.bgeo  ParticleData_Fluid_1320.bgeo  ParticleData_Fluid_1340.bgeo  ParticleData_Fluid_1360.bgeo  ParticleData_Fluid_1380.bgeo  ParticleData_Fluid_140.bgeo  ParticleData_Fluid_1400.bgeo  ParticleData_Fluid_1420.bgeo  ParticleData_Fluid_1440.bgeo  ParticleData_Fluid_1460.bgeo  ParticleData_Fluid_1480.bgeo  ParticleData_Fluid_1500.bgeo  ParticleData_Fluid_1520.bgeo  ParticleData_Fluid_1540.bgeo  ParticleData_Fluid_1560.bgeo  ParticleData_Fluid_1580.bgeo  ParticleData_Fluid_160.bgeo  ParticleData_Fluid_1600.bgeo  ParticleData_Fluid_1620.bgeo  ParticleData_Fluid_1640.bgeo  ParticleData_Fluid_1660.bgeo  ParticleData_Fluid_1680.bgeo  ParticleData_Fluid_1700.bgeo  (+123 more)
Models/amphibot/data/vtk/: ParticleData_Fluid_100.vtk  ParticleData_Fluid_1000.vtk  ParticleData_Fluid_1020.vtk  ParticleData_Fluid_1040.vtk  ParticleData_Fluid_1060.vtk  ParticleData_Fluid_1080.vtk  ParticleData_Fluid_1100.vtk  ParticleData_Fluid_1120.vtk  ParticleData_Fluid_1140.vtk  ParticleData_Fluid_1160.vtk  ParticleData_Fluid_1180.vtk  ParticleData_Fluid_120.vtk  ParticleData_Fluid_1200.vtk  ParticleData_Fluid_1220.vtk  ParticleData_Fluid_1240.vtk  ParticleData_Fluid_1260.vtk  ParticleData_Fluid_1280.vtk  ParticleData_Fluid_1300.vtk  ParticleData_Fluid_1320.vtk  ParticleData_Fluid_1340.vtk  ParticleData_Fluid_1360.vtk  ParticleData_Fluid_1380.vtk  ParticleData_Fluid_140.vtk  ParticleData_Fluid_1400.vtk  ParticleData_Fluid_1420.vtk  ParticleData_Fluid_1440.vtk  ParticleData_Fluid_1460.vtk  ParticleData_Fluid_1480.vtk  ParticleData_Fluid_1500.vtk  ParticleData_Fluid_1520.vtk  ParticleData_Fluid_1540.vtk  ParticleData_Fluid_1560.vtk  ParticleData_Fluid_1580.vtk  ParticleData_Fluid_160.vtk  ParticleData_Fluid_1600.vtk  ParticleData_Fluid_1620.vtk  ParticleData_Fluid_1640.vtk  ParticleData_Fluid_1660.vtk  ParticleData_Fluid_1680.vtk  ParticleData_Fluid_1700.vtk  (+1928 more)
Models/amphibot/meshes/: amphibot_connector.dae  amphibot_eyes.dae  amphibot_module.dae  amphibot_tail.dae
Models/amphibot/sdf/: amphibot.sdf  amphibot8_joints.sdf
Models/brain_model/: ijspeert_CPG.py  ijspeert_CPG_loihi.py  ijspeert_CPG_standalone.py
lamprey_control/: CMakeLists.txt  package.xml
lamprey_control/include/: lamprey_drag_force.h  lamprey_simple_fluids_controller.h
lamprey_control/src/: control.yaml  lamprey_drag_force.cpp  lamprey_simple_fluids_controller.cpp
